@@ -36,6 +36,9 @@
 
 // MACROS ------------------------------------------------------------------
 
+#ifdef PLATFORM_WINDOWS
+#define strdup _strdup
+#endif
 #define	MAX_DEC_FILES	512
 
 // TYPES -------------------------------------------------------------------
