@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-07-10 (SVN):
+    * utils: Define strdup as _strdup after all headers are included,
+      M$ deprecated it.
+
 2012-07-08 (SVN):
     * Updated documentation for supported platforms and separate ports.
 
